# TrixelLookupService

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: cd.yaml  ci.yaml
client_generator/: .gitignore  generate_client.py  openapi-generator-config.yaml  readme_prefix.md  requirements.txt
src/: crud.py  database.py  logging_helper.py  model.py  schema.py  trixellookupserver.py
src/tests/: test_app.py
src/trixel_management/: crud.py  model.py  schema.py  trixel_management.py
tests/: conftest.py  test_app.py  test_tms.py
